# catholic_project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: .yml  main.yml
catholic_project/: app.py  items.py  saint_script.py  saints.html
catholic_project/templates/: saints.html
saint_of_the_day/: app.py  info_app.py
